fix the overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 @import "tailwindcss";
 
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+::-webkit-scrollbar{
+    display: none;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #000000;
